--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonfile": "^4.0.0",
-    "mongoose": "^5.0.15",
+    "mongoose": "^5.0.17",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "npm": "^6.0.0",
@@ -51,6 +51,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "sweetalert": "^2.1.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
